--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Annapurnacaters-Resaturant Near me</title>
     <meta name="description" content="Annapurna Caters - Premium catering and restaurant services for events and daily dining.">
     <meta name="keywords" content="Annapurna Caters, catering service, clatters, restaurant, event catering, fine dining">
-    <link href="assets/img/favicon.png" rel="icon">
+    <link href="favicon-32x32.png" rel="icon">
     <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Catamaran:wght@200&family=Courgette&family=Dancing+Script:wght@700&family=Edu+TAS+Beginner:wght@700&family=Lato:wght@300;900&family=Mukta:wght@700&family=Mulish:wght@300&family=Open+Sans&family=PT+Sans:ital,wght@1,700&family=Poppins:wght@300&family=Raleway:wght@100&family=Roboto&family=Roboto+Condensed:wght@700&family=Roboto+Slab&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/f30fac2c61.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="annapurna.css">
