--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                 <div class="items">
                     <a href="image1/ANNAPURNA.pdf">
                     <button class="btn" type="button" value="click here"> MENU ITEMS</button></a>
-         <span class="badge rounded-pill bg-info"><b>Email:</b><a href="mailto:contact@annapurna.com">contact@annapurna.com</a></span> </span>
+         <span class="badge rounded-pill bg-info"><b>Email:</b><a href="mailto:annapurnacatters18@gmail.com">annapurnacatters18@gmail.com</a></span> </span>
                 </div>
             </div>
             <img src="image1/rasmali.jpg" alt="">
