--- a/index.html
+++ b/index.html
@@ -236,10 +236,10 @@
   </br>
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-
+<a href="#service"><span class="badge rounded-pill bg-danger">Services</span></a>
 
 <!-- Carousel -->
-<div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel" data-bs-pause="hover"id="service">
+<div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel" data-bs-pause="hover">
   <!-- Indicators -->
   <div class="carousel-indicators">
     <button type="button" data-bs-target="#carouselExampleControls" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
