--- a/index.html
+++ b/index.html
@@ -234,10 +234,21 @@
             </div>
         </div>
   </br>
+<style>
+html {
+  scroll-behavior: smooth;
+}
+</style>
+<script>
+document.querySelector('a[href="#service"]').addEventListener('click', function(e) {
+  e.preventDefault();
+  document.querySelector('#service').scrollIntoView({ behavior: 'smooth' });
+});
+</script>
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-<a href="#service"><span class="badge rounded-pill bg-danger">Services</span></a>
 
+ <div id="service">
 <!-- Carousel -->
 <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel" data-bs-pause="hover">
   <!-- Indicators -->
