--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Annapurnacaters-Best Caters in New Delhi</title>
     <meta name="description" content="Annapurna Caters - Premium catering and restaurant services for events and daily dining.">
-    <meta name="keywords" content="Annapurna Caters, catering service, clatters, restaurant, event catering, fine dining">
+    <meta name="keywords" content="Annapurna Caters, catering services near me,food catering near me,food catering services near me,cater for christmas,catering close to me,catering near to me,catering near by me,catering service, clatters, restaurant, event catering, fine dining">
     <link href="favicon-32x32.png" rel="icon">
     <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Catamaran:wght@200&family=Courgette&family=Dancing+Script:wght@700&family=Edu+TAS+Beginner:wght@700&family=Lato:wght@300;900&family=Mukta:wght@700&family=Mulish:wght@300&family=Open+Sans&family=PT+Sans:ital,wght@1,700&family=Poppins:wght@300&family=Raleway:wght@100&family=Roboto&family=Roboto+Condensed:wght@700&family=Roboto+Slab&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/f30fac2c61.js" crossorigin="anonymous"></script>
