--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Annapurnacaters-Best Caters in New Delhi</title>
-    <meta name="description" content="Annapurna Caters - Premium catering and restaurant services for events and daily dining.">
-    <meta name="keywords" content="Annapurna Caters, catering services near me,food catering near me,food catering services near me,cater for christmas,catering close to me,catering near to me,catering near by me,catering service, clatters, restaurant, event catering, fine dining">
+    <meta name="description" content="Annapurna Caters provides exceptional food catering services near you, perfect for family gatherings, corporate events, and festive Christmas celebrations.">
+<meta name="keywords" content="Annapurna Caters, catering services near me, food catering near me, food catering services near me, cater for Christmas, catering close to me, catering near to me, catering near by me, catering service, clatters, restaurant, event catering, fine dining">
     <link href="favicon-32x32.png" rel="icon">
     <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Catamaran:wght@200&family=Courgette&family=Dancing+Script:wght@700&family=Edu+TAS+Beginner:wght@700&family=Lato:wght@300;900&family=Mukta:wght@700&family=Mulish:wght@300&family=Open+Sans&family=PT+Sans:ital,wght@1,700&family=Poppins:wght@300&family=Raleway:wght@100&family=Roboto&family=Roboto+Condensed:wght@700&family=Roboto+Slab&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/f30fac2c61.js" crossorigin="anonymous"></script>
@@ -164,7 +164,71 @@
             </div>
             <img src="image1/rasmali.jpg" alt="">
         </div>
- 
+ <style>
+  body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+  }
+
+  .about-section {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 40px;
+    background-color: #f7f7f7;
+  }
+
+  .about-content {
+    display: flex;
+    max-width: 1200px;
+    gap: 20px;
+    flex-direction: row;
+    align-items: center;
+  }
+
+  .about-image {
+    flex: 1;
+  }
+
+  .about-image img {
+    width: 100%;
+    height: auto;
+    border-radius: 8px;
+    alt: "Catering Services Near Me";
+  }
+
+  .about-text {
+    flex: 2;
+  }
+
+  .about-text h2 {
+    font-size: 32px;
+    color: #333;
+    margin-bottom: 15px;
+  }
+
+  .about-text p {
+    font-size: 18px;
+    line-height: 1.6;
+    color: #555;
+  }
+
+</style>
+
+
+<section class="about-section">
+  <div class="about-content">
+    <div class="about-image">
+      <img src="https://media.istockphoto.com/id/650655146/photo/catering-food-wedding-event-table.webp?a=1&b=1&s=612x612&w=0&k=20&c=OSZxkktoI6XU03mElpuRFw-hykcvek82IEKQNr60cTo=" alt="Food Catering Near Me - Annapurna Caters">
+    </div>
+    <div class="about-text">
+      <h2>About Us</h2>
+      <p>Annapurna Caters brings exceptional <strong>catering services near you</strong>, perfect for any occasion—whether it’s a family gathering, corporate event, or a festive <strong>Christmas catering</strong> celebration. Known for top-notch <strong>food catering services</strong>, Annapurna offers an extensive range of menu options, from fine dining selections to delightful platters that cater to every taste.</p>
+      <p>Whether you’re searching for “<strong>food catering near me</strong>” or the finest “<strong>event catering</strong>” in your area, Annapurna ensures a memorable dining experience. We also specialize in delivering clatters and <strong>restaurant-quality dishes</strong> to elevate your event, providing quality, convenience, and culinary expertise right where you need it. Choose Annapurna Caters for unforgettable flavors and impeccable service.</p>
+    </div>
+  </div>
+</section>
         <div id="food">
             <div class="head">
                 <h1><u> OUR FOODS </u></h1>
