--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
     </div>
     <div class="about-text">
       <h2>About Us</h2>
-      <p>Annapurna Caters brings exceptional <strong>catering services near you</strong>, perfect for any occasion—whether it’s a family gathering, corporate event, or a festive <strong>Christmas catering</strong> celebration. Known for top-notch <strong>food catering services</strong>, Annapurna offers an extensive range of menu options, from fine dining selections to delightful platters that cater to every taste.</p>
+      <p>Annapurna Caters brings exceptional <strong>catering services in south Delhi </strong> as well as <strong>catering services in Chhatarpur </strong>  perfect for any occasion—whether it’s a family gathering, corporate event, or a festive <strong>Christmas catering</strong> celebration. Known for top-notch <strong>food catering services</strong>, Annapurna offers an extensive range of menu options, from fine dining selections to delightful platters that cater to every taste.</p>
       <p>Whether you’re searching for “<strong>food catering near me</strong>” or the finest “<strong>event catering</strong>” in your area, Annapurna ensures a memorable dining experience. We also specialize in delivering clatters and <strong>restaurant-quality dishes</strong> to elevate your event, providing quality, convenience, and culinary expertise right where you need it. Choose Annapurna Caters for unforgettable flavors and impeccable service.</p>
     </div>
   </div>
