--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
     <div class="about-text">
       <h2>About Us</h2>
       <p align="justify">Annapurna Caters offers <strong>best catering services in south Delhi </strong> as well as <strong>best catering services in Chhatarpur </strong>  perfect for any occasion—whether it’s a family gathering, corporate event, or a festive <strong>Christmas catering</strong> celebration. Annapurna offers an extensive range of menu options, from fine dining selections to delightful platters that cater to every taste.</p>
-      <p align="justify">Whether you’re searching for “<strong>food catering near me</strong>” or the finest “<strong>event catering</strong>” in your area, Annapurna ensures a memorable dining experience. We also specialize in delivering clatters and <strong>restaurant-quality dishes</strong> to elevate your event, providing quality, convenience, and culinary expertise right where you need it. Choose Annapurna Caters for unforgettable flavors and impeccable service.</p>
+      <p align="justify">Whether you’re searching for “<strong>food catering near me</strong>” or the finest “<strong>event catering near me </strong>”, Annapurna ensures a memorable dining experience. We also specialize in delivering clatters and <strong>restaurant-quality dishes</strong> to elevate your event, providing quality, convenience, and culinary expertise right where you need it. Choose Annapurna Caters for unforgettable flavors and impeccable service.</p>
     </div>
   </div>
 </section>
