--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
             </div>
             <img src="image1/rasmali.jpg" alt="">
         </div>
- <style>
+<style>
   body {
     font-family: Arial, sans-serif;
     margin: 0;
@@ -195,7 +195,6 @@
     width: 100%;
     height: auto;
     border-radius: 8px;
-    alt: "Catering Services Near Me";
   }
 
   .about-text {
@@ -214,21 +213,40 @@
     color: #555;
   }
 
+  /* Responsive adjustments */
+  @media (max-width: 768px) {
+    .about-content {
+      flex-direction: column;
+      text-align: center;
+    }
+
+    .about-text h2 {
+      font-size: 28px;
+    }
+
+    .about-text p {
+      font-size: 16px;
+    }
+
+    .about-section {
+      padding: 20px;
+    }
+  }
 </style>
 
-
-<section class="about-section">
+<section class="about-section" aria-label="About Annapurna Caters">
   <div class="about-content">
     <div class="about-image">
-      <img src="https://media.istockphoto.com/id/650655146/photo/catering-food-wedding-event-table.webp?a=1&b=1&s=612x612&w=0&k=20&c=OSZxkktoI6XU03mElpuRFw-hykcvek82IEKQNr60cTo=" alt="Food Catering Near Me - Annapurna Caters">
+      <img src="https://media.istockphoto.com/id/650655146/photo/catering-food-wedding-event-table.webp?a=1&b=1&s=612x612&w=0&k=20&c=OSZxkktoI6XU03mElpuRFw-hykcvek82IEKQNr60cTo=" alt="Food Catering Near Me - Annapurna Caters" loading="lazy">
     </div>
     <div class="about-text">
       <h2>About Us</h2>
-      <p align="justify">Annapurna Caters offers <strong>best catering services in south Delhi </strong> as well as <strong>best catering services in Chhatarpur </strong>  perfect for any occasion—whether it’s a family gathering, corporate event, or a festive <strong>Christmas catering</strong> celebration. Annapurna offers an extensive range of menu options, from fine dining selections to delightful platters that cater to every taste.</p>
+      <p align="justify">Annapurna Caters offers <strong>best catering services in south Delhi </strong> as well as <strong>best catering services in Chhatarpur </strong> perfect for any occasion—whether it’s a family gathering, corporate event, or a festive <strong>Christmas catering</strong> celebration. Annapurna offers an extensive range of menu options, from fine dining selections to delightful platters that cater to every taste.</p>
       <p align="justify">Whether you’re searching for “<strong>food catering near me</strong>” or the finest “<strong>event catering near me </strong>”, Annapurna ensures a memorable dining experience. We also specialize in delivering clatters and <strong>restaurant-quality dishes</strong> to elevate your event, providing quality, convenience, and culinary expertise right where you need it. Choose Annapurna Caters for unforgettable flavors and impeccable service.</p>
     </div>
   </div>
 </section>
+
         <div id="food">
             <div class="head">
                 <h1><u> OUR FOODS </u></h1>
